--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset=utf-8>
         <meta name="author" content="Samy">
         <meta name="description" content=" mon premier site web pour apprentissage">
-        <link href="styles.css" rel="stylesheet">
+        <link href="Styles.css" rel="stylesheet">
         <link rel="icon" href="images/favicon.ico">
         <link href="http://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
         <title> Travel Agency </title>
